--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
                 <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
-                <li><a href="#links"><i class="fa fa-comments"></i>Links</a></li>
+                <li><a href="#links"><i class="fa fa-list"></i>Links</a></li>
             </ul>
         </div>
         <div class="main-content">
