--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Hammad Khalid</title>
+    <link rel="icon" href="images/Icon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -173,11 +174,6 @@
                 <div class="row">
                     <div class="section-title padd-15">
                         <h2>Portfolio</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="portfolio-heading padd-15">
-                        <h2>My Past Pictures : </h2>
                     </div>
                 </div>
                 <div class="row">
@@ -378,7 +374,7 @@
                     </div>
                 </div>
                 <div class="icons">
-                    <a href="https://www.facebook.com/profile.php?id=100082614084299" target="_blank">
+                    <a href="https://www.facebook.com/profile.php?id=100070897916920" target="_blank">
                         <div class="layer">
                             <span></span>
                             <span></span>
@@ -396,7 +392,7 @@
                         </div>
                         <div class="text">Instagram</div>
                     </a>
-                    <a href="https://www.snapchat.com/add/hammadkhalid170?share_id=vmPLo8vWObU&locale=en-US" target="_blank">
+                    <a href="https://www.snapchat.com/add/hammadkhalid77?share_id=aisK1FMqg_0&locale=en-US" target="_blank">
                         <div class="layer">
                             <span></span>
                             <span></span>
