--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <p>Degree : <span>Intermediate</span></p>
                                     </div>
                                     <div class="info-item padd-15">
-                                        <p>Phone : <span>+92309 647 0908</span></p>
+                                        <p>Phone : <span>+92 309 647 0908</span></p>
                                     </div>
                                     <div class="info-item padd-15">
                                         <p>City : <span>Faisalabad</span></p>
@@ -391,15 +391,6 @@
                             <span class="fab fa-instagram"></span>
                         </div>
                         <div class="text">Instagram</div>
-                    </a>
-                    <a href="https://www.snapchat.com/add/hammadkhalid77?share_id=aisK1FMqg_0&locale=en-US" target="_blank">
-                        <div class="layer">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span class="fab fa-snapchat"></span>
-                        </div>
-                        <div class="text">Snapchat</div>
                     </a>
                     <a href="https://www.youtube.com/channel/UC3ekrw0KU4yy6Zv8zajWGWA" target="_blank">
                         <div class="layer">
