--- a/index.html
+++ b/index.html
@@ -401,6 +401,15 @@
                         </div>
                         <div class="text">YouTube</div>
                     </a>
+                    <a href="https://www.snapchat.com/add/hammadkhalid368" target="_blank">
+                        <div class="layer">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span class="fab fa-snapchat"></span>
+                        </div>
+                        <div class="text">SnapChat</div>
+                    </a>
                 </div>
             </div>
            </section>
