--- a/index.html
+++ b/index.html
@@ -147,17 +147,17 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-date">
-                                                    <i class="fa fa-calendar"></i> 2016 - 2018
+                                                    <i class="fa fa-calendar"></i> 2020 - 2021
                                                 </h3>
-                                                <h4 class="timeline-title">Matric In Computer Science</h4>
+                                                <h4 class="timeline-title">Microsoft Office</h4>
                                                 <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, voluptatem voluptates. Tempore recusandae facere laudantium, quo vitae sit quibusdam cumque quasi commodi, laborum sint necessitatibus?</p>
                                             </div>
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-date">
-                                                    <i class="fa fa-calendar"></i> 2018 - 2020
+                                                    <i class="fa fa-calendar"></i> 2021 - 2022
                                                 </h3>
-                                                <h4 class="timeline-title">Intermediate In FSC(Pre-Engineering)</h4>
+                                                <h4 class="timeline-title">Web Development</h4>
                                                 <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, voluptatem voluptates. Tempore recusandae facere laudantium, quo vitae sit quibusdam cumque quasi commodi, laborum sint necessitatibus?</p>
                                             </div>
                                         </div>
