--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
-                        <h3 class="assalamualaikum">As Salamu Alaikum, My Name Is <span class="typing"> Hammad Khalid</span></h3>
+                        <h3 class="assalamualaikum">As Salamu Alaikum, I'm <span class="typing"> Hammad Khalid</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quidem nobis deleniti magni repellendus saepe excepturi? Dicta excepturi reiciendis quam ratione tenetur accusamus, cum mollitia dolorum minima. Ipsa, iste doloribus.</p>
                         <a href="#contact" class="btn about-me"> About Me</a>
                     </div>
@@ -60,7 +60,7 @@
                     <div class="about-content padd-15">
                         <div class="row">
                             <div class="about-text padd-15">
-                                <h3>I'm <span> Hammad Khalid </span></h3>
+                                <h3>I'm <span> Hammad Khalid </span> From <span> Faisalabad</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias aperiam consequatur nam laborum sapiente, aspernatur doloremque beatae ut fugit. Nesciunt quis error eveniet explicabo laudantium quas, iusto officia enim animi, exercitationem inventore facilis consectetur itaque voluptatem aut porro earum ad commodi eaque quae eum quaerat perspiciatis, officiis cumque! Veniam, at. Distinctio dolore accusantium quidem eius?</p>
                             </div>
                         </div>
