--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
-                        <h3 class="assalamualaikum">As Salamu Alaikum, I'm <span class="typing"> Hammad Khalid</span></h3>
+                        <h3 class="assalamualaikum">As Salamu Alaikum, I'm <span class="typing"> YouTuber</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quidem nobis deleniti magni repellendus saepe excepturi? Dicta excepturi reiciendis quam ratione tenetur accusamus, cum mollitia dolorum minima. Ipsa, iste doloribus.</p>
                         <a href="#contact" class="btn about-me"> About Me</a>
                     </div>
