--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
                 <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
-                <li><a href="#links"><i class="fa fa-list"></i>Links</a></li>
             </ul>
         </div>
         <div class="main-content">
@@ -41,7 +40,7 @@
                     <div class="home-info padd-15">
                         <h3 class="assalamualaikum">As Salamu Alaikum, I'm <span class="typing"> YouTuber</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quidem nobis deleniti magni repellendus saepe excepturi? Dicta excepturi reiciendis quam ratione tenetur accusamus, cum mollitia dolorum minima. Ipsa, iste doloribus.</p>
-                        <a href="#contact" class="btn about-me"> About Me</a>
+                        <a href="images/Hammad.CV.pdf" download class="btn btn2"> Download CV </a>
                     </div>
                     <div class="home-image padd-15">
                         <img src="images/hero.jpg" alt="">
@@ -307,112 +306,29 @@
             </div>
            </section>
            <section class="contact section" id="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="section-title padd-15">
-                        <h2>Contact</h2>
-                    </div>
-                </div>
-                <h3 class="contact-title padd-15"> Have You Any Questions ?</h3>
-                <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
-                <div class="row">
-                    <div class="contact-info-item padd-15">
-                        <div class="icon"><i class="fa fa-phone"></i></div>
-                        <h4>Call Us On</h4>
-                        <p>+92 309 647 0908</p>
-                    </div>
-                    <div class="contact-info-item padd-15">
-                        <div class="icon"><i class="fa fa-envelope"></i></div>
-                        <h4>Email</h4>
-                        <p>hammadkhalid679@gmail.com</p>
-                    </div>
-                </div>
-                <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-                <h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
-                <div class="row">
-                    <div class="contact-form padd-15">
-                        <div class="row">
-                            <div class="form-item col-6 padd-15">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Name">
-                                </div>
-                            </div>
-                            <div class="form-item col-6 padd-15">
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Email">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-item col-12 padd-15">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Subject">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-item col-12 padd-15">
-                                <div class="form-group">
-                                    <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-item col-12 padd-15">
-                                <button type="submit" class="btn">Send Message</button>
-                            </div>
-                        </div>
-                    </div>
+            <div class="row">
+                <div class="section-title padd-15">
+                    <h2>Contact</h2>
                 </div>
             </div>
-           </section>
-           <section class="links section" id="links">
-            <div class="container">
-                <div class="row">
-                    <div class="section-title padd-15">
-                        <h2>Links</h2>
-                    </div>
-                </div>
-                <div class="icons">
-                    <a href="https://www.facebook.com/profile.php?id=100070897916920" target="_blank">
-                        <div class="layer">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span class="fab fa-facebook-f"></span>
-                        </div>
-                        <div class="text">Facebook</div>
-                    </a>
-                    <a href="https://www.instagram.com/hammad._.khalid" target="_blank">
-                        <div class="layer">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span class="fab fa-instagram"></span>
-                        </div>
-                        <div class="text">Instagram</div>
-                    </a>
-                    <a href="https://www.youtube.com/channel/UC3ekrw0KU4yy6Zv8zajWGWA" target="_blank">
-                        <div class="layer">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span class="fab fa-youtube"></span>
-                        </div>
-                        <div class="text">YouTube</div>
-                    </a>
-                    <a href="https://www.snapchat.com/add/hammadkhalid368" target="_blank">
-                        <div class="layer">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span class="fab fa-snapchat"></span>
-                        </div>
-                        <div class="text">SnapChat</div>
-                    </a>
-                </div>
-            </div>
-           </section>
+           <div class="contact-right">
+            <form>
+                <input type="text" name="Name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="Message"rows="6" placeholder="Your Message"></textarea>
+                <button type="submit" class="btn btn2">Submit</button>
+            </form>
+        </div>
+    </section>
+    <div class="copyright">
+        <p>Copyright ⓒ Hammad. <i class="fa-solid fa-heart"></i> All Rights Reserved</p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=100070897916920" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/hammad._.khalid" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.snapchat.com/add/hammadkhalid368" target="_blank"><i class="fa-brands fa-square-snapchat"></i></a>
+            <a href="https://www.youtube.com/channel/UC3ekrw0KU4yy6Zv8zajWGWA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </div>
         </div>
     </div>
     <div class="style-switcher">
