--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main-container">
         <div class="hammad">
             <div class="logo">
-                <a href="#"><span>H</span>ammad</a>
+                <a href="#"><span>Hammad</span></a>
             </div>
             <div class="nav-toggler">
                 <span></span>
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
-                        <h3 class="assalamualaikum">As Salamu Alaikum, I'm <span class="typing"> YouTuber</span></h3>
+                        <h3 class="assalamualaikum"><span>As Salamu Alaikum ,</span> I'm<span class="typing"> YouTuber</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quidem nobis deleniti magni repellendus saepe excepturi? Dicta excepturi reiciendis quam ratione tenetur accusamus, cum mollitia dolorum minima. Ipsa, iste doloribus.</p>
                         <a href="images/Hammad.CV.pdf" download class="btn btn2"> Download CV </a>
                     </div>
@@ -322,7 +322,7 @@
         </div>
     </section>
     <div class="copyright">
-        <p>Copyright ⓒ Hammad. <i class="fa-solid fa-heart"></i> All Rights Reserved</p>
+        <p>Copyright ⓒ Hammad.<i class="fa-solid fa-heart"></i> All Rights Reserved</p>
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100070897916920" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://www.instagram.com/hammad._.khalid" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
