--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a href="https://www.facebook.com/profile.php?id=100070897916920" target="_blank"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/hammad._.khalid" target="_blank"><i class="fa fa-instagram"></i></a>
                             <a href="https://www.snapchat.com/add/hammadkhalid368" target="_blank"><i class="fa fa-snapchat"></i></a>
-                            <a href="https://www.facebook.com/profile.php?id=100070897916920" target="_blank"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/_madi117" target="_blank"><i class="fa fa-twitter"></i></a>
                         </div>
                     </div>
                 </div>
