--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="madi-inner">
             <div class="logo">
-                <a href="#">Madi</a>
+                <a href="#">Portfolio</a>
             </div>
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
@@ -39,7 +39,7 @@
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
             <div class="copyright-text">
-                &copy; 2022 The Madi Template
+                &copy; 2022 All Rights Reserved
             </div>
         </div>
         </div>
@@ -91,7 +91,7 @@
                                                 <p>Degree : <span>Intermediate</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Phone : <span>+92 309 647 0908</span></p>
+                                                <p>Phone : <span>+92 326 531 4856</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>City : <span>Faisalabad</span></p>
@@ -280,7 +280,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
                             <h4>Call Us On</h4>
-                            <p>+92 309 647 0908</p>
+                            <p>+92 326 531 4856</p>
                         </div>
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-map-marker"></i></div>
