--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="buttons padd-15">
-                                                <a href="images/Hammad.CV.pdf" class="btn" target="_blank">Download CV</a>
+                                                <a href="images/CV.pdf" class="btn" target="_blank">Download CV</a>
                                                 <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                             </div>
                                         </div>
